# sfdc2openapi

./: README.md  pyproject.toml
src/sfdc2openapi/: cli.py  utilities.py
src/sfdc2openapi/config/: openapi_template.json
